# ind-doc-rag

./: .dockerignore  .env.example  .gitignore  NOTES.md  README.md  docker-compose.gpu.yml  docker-compose.yml  docs_server.py  install.sh  main.py  nginx.conf  pyproject.toml  workflow.json
agent/: Dockerfile  config.py  graph.py  memory.py  server.py  tools.py
frontend/: index.html  main-entry.jsx  main.jsx  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: n8n.ts
frontend/src/components/: InputBar.tsx  Message.tsx  SettingsPanel.tsx  ThinkingBlock.tsx  ToolStep.tsx  VerificationBlock.tsx
frontend/src/hooks/: useChat.ts  useModelStatus.ts
frontend/src/styles/: global.css  theme.css
ingestion/: 1-convert-docs.py  2-chunk-and-load.py  3-test-records-in-db.py
