[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "docling>=2.80.0",
    "fastembed>=0.7.4",
    "fitz>=0.0.1.dev2",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "numpy>=2.4.3",
    "pymupdf>=1.27.2",
    "qdrant-client>=1.17.1",
]
