[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "docling>=2.80.0",
    "docling-core[chunking]>=2.70.1",
    "fastapi>=0.136.0",
    "fastembed>=0.7.4",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.3",
    "numpy>=2.4.3",
    "pymupdf>=1.27.2",
    "qdrant-client>=1.17.1",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
]
